--- a/org.eclipse.fx.drift/src-native/lib/glew/CMakeLists.txt
+++ b/org.eclipse.fx.drift/src-native/lib/glew/CMakeLists.txt
@@ -1,32 +1,32 @@
 cmake_minimum_required(VERSION 3.1)
 project(glew)
 
-set(PUBLIC_HDR_DIR      include)
+# configuring msvc to include the runtime
+if (WIN32)
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+endif (WIN32)
 
-# glew specific
-add_compile_definitions(GLEW_STATIC)
-#add_compile_definitions(GLEW_BUILD)
-
-set(PUBLIC_HDRS
+set(Glew-Headers
 	include/GL/glew.h
 	include/GL/eglew.h
 	include/GL/glxew.h
 	include/GL/wglew.h
-)
+	)
 
-set(SRCS
-    src/glew.c
-)
+set(Glew-Sources
+	src/glew.c
+	)
 
-include_directories(${PUBLIC_HDR_DIR})
-add_library(glew STATIC ${PUBLIC_HDRS} ${SRCS})
-target_include_directories(glew PUBLIC ${PUBLIC_HDR_DIR})
+add_library(Glew-OBJ OBJECT ${Glew-Headers} ${Glew-Sources})
+target_include_directories(Glew-OBJ PUBLIC "include")
+target_compile_definitions(Glew-OBJ PUBLIC GLEW_STATIC) # to get exports
+set_property(TARGET Glew-OBJ PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 if (WIN32)
-	target_link_libraries(glew PRIVATE opengl32 gdi32)
-endif()
+	target_link_libraries(Glew-OBJ PUBLIC opengl32 gdi32)
+endif(WIN32)
 
-set_property(TARGET glew PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 
 
