--- a/org.eclipse.fx.drift/src-native/DriftFX/CMakeLists.txt
+++ b/org.eclipse.fx.drift/src-native/DriftFX/CMakeLists.txt
@@ -1,15 +1,14 @@
 cmake_minimum_required(VERSION 3.1)
 project(DriftFX CXX)
 
-set(TARGET              DriftFX)
-set(PUBLIC_HDR_DIR      include)
+# configuring msvc to include the runtime
+if (WIN32)
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+endif (WIN32)
 
-add_compile_definitions(GLEW_STATIC)
-
-# public headers are always in include/${TARGET}/
-file(GLOB_RECURSE PUBLIC_HDRS ${PUBLIC_HDR_DIR}/${TARGET}/*.h)
-
-set(PUBLIC_HDRS
+set(DriftFX-Headers
+	include/DriftFX/Common.h
 	include/DriftFX/DriftFX.h
 	include/DriftFX/DriftFXSurface.h
 	include/DriftFX/RenderTarget.h
@@ -20,7 +19,7 @@ set(PUBLIC_HDRS
 )
 
 # list each source file individually
-set(SRCS
+set(DriftFX-Sources
     src/Context.cpp
     src/JNINativeSurface.cpp
     src/NativeSurface.cpp
@@ -43,76 +42,72 @@ set(SRCS
 )
 
 if (WIN32)
-	list(APPEND SRCS src/gl/wgl/WGLGLContext)
+	list(APPEND DriftFX-Sources src/gl/wgl/WGLGLContext)
 	
-	list(APPEND SRCS src/prism/d3d/D3DPrismBridge)
-	list(APPEND SRCS src/prism/d3d/D3DNativeSurface)
-	list(APPEND SRCS src/prism/d3d/D3DSharedTexture)
-	list(APPEND SRCS src/prism/d3d/NativeAPI)
+	list(APPEND DriftFX-Sources src/prism/d3d/D3DPrismBridge)
+	list(APPEND DriftFX-Sources src/prism/d3d/D3DNativeSurface)
+	list(APPEND DriftFX-Sources src/prism/d3d/D3DSharedTexture)
+	list(APPEND DriftFX-Sources src/prism/d3d/NativeAPI)
 	
-	list(APPEND SRCS src/win32/D3D9ExContext)
-	list(APPEND SRCS src/win32/D3D9Texture)
-	list(APPEND SRCS src/win32/Error)
+	list(APPEND DriftFX-Sources src/win32/D3D9ExContext)
+	list(APPEND DriftFX-Sources src/win32/D3D9Texture)
+	list(APPEND DriftFX-Sources src/win32/Error)
 endif (WIN32)
 
 if (LINUX)
-	list(APPEND SRCS src/gl/glx/GLXGLContext)
+	list(APPEND DriftFX-Sources src/gl/glx/GLXGLContext)
 	
-	list(APPEND SRCS src/prism/es2/ES2PrismBridge)
-	list(APPEND SRCS src/prism/es2/ES2NativeSurface)
-	list(APPEND SRCS src/prism/es2/NativeAPI)
+	list(APPEND DriftFX-Sources src/prism/es2/ES2PrismBridge)
+	list(APPEND DriftFX-Sources src/prism/es2/ES2NativeSurface)
+	list(APPEND DriftFX-Sources src/prism/es2/NativeAPI)
 	
-	list(APPEND SRCS src/prism/es2/glx/GLXES2PrismBridge)
-	list(APPEND SRCS src/prism/es2/glx/GLXSharedTexture)
-	list(APPEND SRCS src/prism/es2/glx/NativeAPI)
+	list(APPEND DriftFX-Sources src/prism/es2/glx/GLXES2PrismBridge)
+	list(APPEND DriftFX-Sources src/prism/es2/glx/GLXSharedTexture)
+	list(APPEND DriftFX-Sources src/prism/es2/glx/NativeAPI)
 endif (LINUX)
 
 
 if (APPLE)
-	list(APPEND SRCS src/gl/cgl/cgl)
-	list(APPEND SRCS src/gl/cgl/CGLGLContext)
-	list(APPEND SRCS src/gl/cgl/cgl_context)
+	list(APPEND DriftFX-Sources src/gl/cgl/cgl)
+	list(APPEND DriftFX-Sources src/gl/cgl/CGLGLContext)
+	list(APPEND DriftFX-Sources src/gl/cgl/cgl_context)
 	
-	list(APPEND SRCS src/prism/es2/ES2PrismBridge)
-	list(APPEND SRCS src/prism/es2/ES2NativeSurface)
-	list(APPEND SRCS src/prism/es2/NativeAPI)
+	list(APPEND DriftFX-Sources src/prism/es2/ES2PrismBridge)
+	list(APPEND DriftFX-Sources src/prism/es2/ES2NativeSurface)
+	list(APPEND DriftFX-Sources src/prism/es2/NativeAPI)
 	
-	list(APPEND SRCS src/prism/es2/cgl/CGLES2PrismBridge)
-	list(APPEND SRCS src/prism/es2/cgl/IOSurfaceSharedTexture)
-	list(APPEND SRCS src/prism/es2/cgl/NativeAPI)
+	list(APPEND DriftFX-Sources src/prism/es2/cgl/CGLES2PrismBridge)
+	list(APPEND DriftFX-Sources src/prism/es2/cgl/IOSurfaceSharedTexture)
+	list(APPEND DriftFX-Sources src/prism/es2/cgl/NativeAPI)
 endif (APPLE)
 
 
-if (LINUX)
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
-endif()
-
 # specify where our headers are
-include_directories(${PUBLIC_HDR_DIR})
+include_directories(include)
 include_directories(src)
 
-# we're building a library
-add_library(${TARGET} STATIC ${PUBLIC_HDRS} ${SRCS})
+if (WIN32)
+	set(DIRECTX_INCLUDE_DIRS 
+		"C:/Program Files (x86)/Microsoft DirectX SDK (June 2010)/Include")
+	set(DIRECTX9_LIBRARIES 
+		"C:/Program Files (x86)/Microsoft DirectX SDK (June 2010)/Lib/x64/d3d9.lib"
+		"C:/Program Files (x86)/Microsoft DirectX SDK (June 2010)/Lib/x64/d3dx9.lib"
+		)
+#	include_directories(${DIRECTX_INCLUDE_DIRS})
+endif (WIN32)
 
-# specify where the public headers of this library are
-target_include_directories(${TARGET} PUBLIC ${PUBLIC_HDR_DIR})
+add_library(DriftFX-OBJ OBJECT ${DriftFX-Headers} ${DriftFX-Sources})
+target_include_directories(DriftFX-OBJ PUBLIC include)
+set_property(TARGET DriftFX-OBJ PROPERTY POSITION_INDEPENDENT_CODE ON)
+target_compile_definitions(DriftFX-OBJ PRIVATE BUILDING_DLL)
+target_link_libraries(DriftFX-OBJ PUBLIC Utils-OBJ)
+target_link_libraries(DriftFX-OBJ PUBLIC Glew-OBJ)
 
-target_link_libraries(${TARGET} 
-	PRIVATE glew
-	PRIVATE utils
-)
-
-set_property(TARGET ${TARGET} PROPERTY POSITION_INDEPENDENT_CODE ON)
-
+#target_compile_definitions(DriftFX-OBJ PUBLIC GLEW_STATIC)
 
 if (WIN32)
-    target_link_libraries(${TARGET} PRIVATE opengl32 gdi32)
-endif()
+#target_link_libraries(DriftFX-OBJ PUBLIC opengl32 gdi32)
+target_include_directories(DriftFX-OBJ PRIVATE ${DIRECTX_INCLUDE_DIRS})
+target_link_libraries(DriftFX-OBJ PUBLIC ${DIRECTX9_LIBRARIES})
+endif (WIN32)
 
-		
-#if (APPLE)
-#add_executable(phun src/Phun)
-#target_link_libraries(phun DriftFX driftglew utils samples )
-#target_link_libraries(phun "-framework OpenGL -framework IOSurface -framework CoreFoundation -framework Cocoa")
-#target_link_options(phun PRIVATE -Wl,-all_load)
-#endif (APPLE)
