--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ jobs:
         - cmake --version
         - mkdir build
         - cd build
-        - cmake -G "Visual Studio 15 2017 Win64" ../org.eclipse.fx.drift/src-native
+        - cmake -G "Visual Studio 15 2017 Win64" ../org.eclipse.fx.drift/src-native || cat CMakeFiles/CMakeOutput.log
         - ls -al
     - name: "MacOS GCC Natives"
       os: osx
@@ -23,14 +23,14 @@ jobs:
         - cmake --version
         - mkdir build
         - cd build
-        - cmake -G "Unix Makefiles" ../org.eclipse.fx.drift/src-native
+        - cmake -G "Unix Makefiles" ../org.eclipse.fx.drift/src-native || cat CMakeFiles/CMakeOutput.log
     - name: "Linux GCC Natives"
       os: linux
       language: cpp
       script:
         - echo "Building Linux GCC Natives"
         - cmake --version
-        - cmake -G "Unix Makefiles" ../org.eclipse.fx.drift/src-native
+        - cmake -G "Unix Makefiles" ../org.eclipse.fx.drift/src-native || cat CMakeFiles/CMakeOutput.log
         - ls -al
     - stage: build-java
       name: "Java Build"
