--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,8 @@ jobs:
       script:
         - echo "Building Linux GCC Natives"
         - cmake --version
+        - mkdir build
+        - cd build
         - cmake -G "Unix Makefiles" ../org.eclipse.fx.drift/src-native || cat CMakeFiles/CMakeOutput.log
         - ls -al
     - stage: build-java
