--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
         - gcc
       install:
         - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
-        - mkdir ${DEPS_DIR} && ${DEPS_DIR}
+        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
         - travis_retry wget --no-check-certificate https://cmake.org/files/v3.13/cmake-3.13.0-Linux-x86_64.tar.gz
           # - echo "*cmake-3.13.0-Linux-x86_64.tar.gz" > cmake_md5.txt
         - tar -xvf cmake-3.13.0-Linux-x86_64.tar.gz > /dev/null
