--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,14 @@ jobs:
       name: "Windows MSVC Natives"
       os: windows
       language: cpp
+      install:
+        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
+        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
+        - travis_retry wget --no-check-certificate https://cmake.org/files/v3.13/cmake-3.13.0-win32-x84.zip
+        - unzip cmake-3.13.0-win32-x64.zip > /dev/null
+        - mv cmake-3.13.0-win32-x64 cmake-install
+        - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/bin:$PATH
+        - cd ${TRAVIS_BUILD_DIR}
       before_script:
         - choco install jdk8
         - choco install visualstudio2017buildtools
