--- a/org.eclipse.fx.drift/src-native/lib/utils/CMakeLists.txt
+++ b/org.eclipse.fx.drift/src-native/lib/utils/CMakeLists.txt
@@ -27,3 +27,4 @@ include_directories(${PUBLIC_HDR_DIR})
 add_library(Utils-OBJ OBJECT ${Utils-Headers} ${Utils-Sources})
 target_include_directories(Utils-OBJ PUBLIC include)
 set_property(TARGET Utils-OBJ PROPERTY POSITION_INDEPENDENT_CODE ON)
+target_compile_definitions(Utils-OBJ PRIVATE BUILDING_DLL)
