working on build

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ jobs:
         - echo "Building Windows MSVC Natives"
           #        - ls -al "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools"
           #        - ls -al "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild"
+        - ls -al "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin"
+        - "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin/msbuild.exe" -version
         - cmake --version
         - msbuild -version
         - mkdir build
