working on build

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ jobs:
           #        - ls -al "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools"
           #        - ls -al "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild"
         - ls -al "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin"
-        - "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin/msbuild.exe -version"
+        - cd "C:/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin"
+        - MSBuild.exe -version
+        - ./MSBuild.exe -version
         - cmake --version
         - msbuild -version
         - mkdir build
