working on build

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,12 @@ jobs:
         - choco install visualstudio2017buildtools
       script:
         - "/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe" -version
-        - /c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe -version
+          #- /c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe -version
         - MSBUILDPATH="/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild.exe"
         - MSBUILD=${MSBUILDPATH}/MSBuild.exe
         - $MSBUILD -version
         - PATH=$MSBUILDPATH:$PATH
         - msbuild -version
-
     - stage: build-natives
       name: "Windows MSVC Natives"
       os: windows
