--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ jobs:
         - "/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe" -version
           #- /c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe -version
         - MSBUILDPATH="/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild.exe"
-        - MSBUILD=${MSBUILDPATH}/MSBuild.exe
-        - $MSBUILD -version
+        - MSBUILD="${MSBUILDPATH}/MSBuild.exe"
+        - ${MSBUILD} -version
         - PATH=$MSBUILDPATH:$PATH
         - msbuild -version
     - stage: build-natives
