--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ jobs:
       install:
         - choco install visualstudio2017buildtools
       script:
-        - "/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe" -version
+        - /c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe -version
           #- /c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe -version
         - MSBUILDPATH="/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild.exe"
         - MSBUILD="${MSBUILDPATH}/MSBuild.exe"
