--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,14 @@ jobs:
       install:
         - choco install visualstudio2017buildtools
       script:
-        - /c/Program Files\ \(x86\)/Microsoft\ Visual\ Studio/2017/BuildTools/Bin/MSBuild.exe -version
+              #- /c/Program Files\ \(x86\)/Microsoft\ Visual\ Studio/2017/BuildTools/Bin/MSBuild.exe -version
           #- /c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/Bin/MSBuild.exe -version
         - MSBUILDPATH="/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild.exe"
-        - ls -la $MSBUILDPATH
+        - ls -la ${MSBUILDPATH}
         - MSBUILD="${MSBUILDPATH}/MSBuild.exe"
         - ${MSBUILD} -version
         - PATH=$MSBUILDPATH:$PATH
+        - echo $PATH
         - msbuild -version
     - stage: build-natives
       name: "Windows MSVC Natives"
