--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ jobs:
         - ls -la "${MSBUILDPATH}"
         - PATH=$MSBUILDPATH:$PATH
         - echo $PATH
-        - MSBuild -version
-        - msbuild -version
+        - MSBuild.exe -version
         - /c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2017/BuildTools/MSBuild/15.0/Bin/MSBuild.exe -version
     - stage: build-natives
       name: "Windows MSVC Natives"
