working on build

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,30 +5,18 @@ stages:
 jobs:
   include:
     - stage: build-natives
-      name: "invoke msbuild"
-      os: windows
-      language: cpp
-      install:
-        - choco install visualstudio2017buildtools
-      script:
-        - MSBUILDPATH="/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin"
-        - ls -la "${MSBUILDPATH}"
-        - PATH=$MSBUILDPATH:$PATH
-        - echo $PATH
-        - MSBuild.exe -version
-        - /c/Program\ Files\ \(x86\)/Microsoft\ Visual\ Studio/2017/BuildTools/MSBuild/15.0/Bin/MSBuild.exe -version
-    - stage: build-natives
       name: "Windows MSVC Natives"
       os: windows
       language: cpp
       install:
-        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
-        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
-        - travis_retry wget --no-check-certificate https://cmake.org/files/v3.13/cmake-3.13.0-win64-x64.zip 2>>wgeterr.log
-        - unzip cmake-3.13.0-win64-x64.zip > /dev/null
-        - mv cmake-3.13.0-win64-x64 cmake-install
-        - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/bin:$PATH
-        - cd ${TRAVIS_BUILD_DIR}
+          #        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
+          #        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
+          #        - travis_retry wget --no-check-certificate https://cmake.org/files/v3.13/cmake-3.13.0-win64-x64.zip 2>>wgeterr.log
+          #        - unzip cmake-3.13.0-win64-x64.zip > /dev/null
+          #        - mv cmake-3.13.0-win64-x64 cmake-install
+          #        - PATH=${DEPS_DIR}/cmake-install:${DEPS_DIR}/cmake-install/bin:$PATH
+          #        - cd ${TRAVIS_BUILD_DIR}
+        - choco install cmake
         - choco install jdk8
         - choco install visualstudio2017buildtools
         - choco install visualstudio2017-workload-vctools
