working on build

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ jobs:
     - stage: build-natives
       name: "Windows MSVC Natives"
       os: windows
-      language: cpp
+      language: shell
       install:
           #        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
           #        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
