--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,8 @@ jobs:
       language: cpp
       compiler:
         - gcc
+      before_install:
+        - sudo apt-get install mesa-common-dev
       install:
         - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
         - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
