--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ stages:
 jobs:
   include:
     - stage: build-natives
+      #filter_secrets: false
       name: "Windows MSVC Natives"
       os: windows
       language: shell
       install:
-         - choco install awscli
+        - choco install awscli
           #        - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
           #        - mkdir ${DEPS_DIR} && cd ${DEPS_DIR}
           #        - travis_retry wget --no-check-certificate https://cmake.org/files/v3.13/cmake-3.13.0-win64-x64.zip 2>>wgeterr.log
