--- a/.travis.yml
+++ b/.travis.yml
@@ -37,9 +37,9 @@ jobs:
         - mkdir build
         - cd build
         - cmake -G "Visual Studio 15 2017 Win64" ../org.eclipse.fx.drift/src-native || cat CMakeFiles/CMakeOutput.log
-        - ls -al
         - MSBuild.exe releng.sln
-        - ls -al driftfx/Debug
+        - ls -al
+        - ls -al Debug
     - name: "MacOS GCC Natives"
       os: osx
       language: cpp
