--- a/.travis.yml
+++ b/.travis.yml
@@ -27,19 +27,17 @@ jobs:
         - AWSPATH="/c/Program Files/Amazon/AWSCLI"
         - ls -al "$AWSPATH"
         - PATH=$AWSPATH:$PATH
-          #        - ls -al "/c/Program Files (x86)/Windows Kits/10/Include"
         - echo "Building Windows MSVC Natives"
         - aws.exe sts get-caller-identity
         - MSBUILDPATH="/c/Program Files (x86)/Microsoft Visual Studio/2017/BuildTools/MSBuild/15.0/Bin"
         - PATH=$MSBUILDPATH:$PATH
-        - MSBuild.exe -version
-        - cmake --version
         - mkdir build
         - cd build
         - cmake -G "Visual Studio 15 2017 Win64" ../org.eclipse.fx.drift/src-native || cat CMakeFiles/CMakeOutput.log
-        - MSBuild.exe releng.sln
-        - ls -al
-        - ls -al Debug
+        - MSBuild.exe -verbosity:minimal releng.sln
+      after_success:
+        - aws.exe s3 cp Debug/driftfx.dll s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/windows/driftfx.dll
+        - aws.exe s3 cp Debug/driftfx.lib s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/windows/driftfx.lib
     - name: "MacOS GCC Natives"
       os: osx
       language: cpp
@@ -92,8 +90,17 @@ jobs:
       name: "Java Build"
       os: linux
       language: java
+      before_install:
+        - pip install --user awscli
       script: 
         - echo "executing Maven"
         - aws sts get-caller-identity
-        - mvn --version
+        - mkdir natives
+        - aws s3 cp s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/linux/libdriftfx.so natives/libdriftfx.so
+        - aws s3 cp s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/macos/libdriftfx.dylib natives/libdriftfx.dylib
+        - aws s3 cp s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/windows/driftfx.dll natives/driftfx.dll
+        - aws s3 cp s3://efxclipse-drift/$TRAVIS_BUILD_NUMBER/natives/windows/driftfx.lib natives/driftfx.lib
+        - ls -al natives
+        - mvn clean package
+        - ls -al target
 
